[package]
name = "kubeport"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
axum = { version = "0.7.5", features = ["http2", "ws"] }
bincode = "1.3.3"
clap = { version = "4.5.11", features = ["derive", "env"] }
dashmap = "6.0.1"
flume = "0.11.0"
futures-util = "0.3.30"
httparse = "1.9.4"
hyper = { version = "1.4.1", features = ["full", "http1", "http2"] }
hyper-util = { version = "0.1.6", features = ["full"] }
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.1", features = ["full", "io-std", "io-util", "macros", "rt", "rt-multi-thread"] }
tokio-tungstenite = "0.23.1"
uuid7 = { version = "1.0.0", features = ["serde"] }


tracing = "0.1.40"
tracing-subscriber = { version="0.3.18", features= ["chrono"] }
tracing-appender = "0.2.3"
