[package]
name = "kubeport"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }

bincode = "1.3.3"
clap = { version = "4.5.11", features = ["derive", "env"] }
dashmap = "6.0.1"
flume = "0.11.0"
futures-util = "0.3.30"

serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.1", features = ["full", "io-std", "io-util", "macros", "rt", "rt-multi-thread"] }
tokio-tungstenite = "0.23.1"
uuid7 = { version = "1.0.0", features = ["serde"] }

tracing = "0.1.40"
tracing-subscriber = { version="0.3.18", features= ["chrono"] }
tracing-appender = "0.2.3"
once_cell = "1.19.0"
rkyv = { version = "0.7.44", features = ["bytecheck", "validation"] }
fastwebsockets = { version = "0.8.0", features = ["unstable-split", "upgrade"] }


hyper-util = { version = "0.1.0", features = ["tokio"] }
http-body-util = { version = "0.1.0" }
hyper = { version = "1", features = [
    "http1",
    "server",
    "client",
] }



